Bug 139493 - Crash Right clicking in table in Impress with Navigator tab activated
Summary: Crash Right clicking in table in Impress with Navigator tab activated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords: haveBacktrace, regression
: 139526 (view as bug list)
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2021-01-08 13:26 UTC by Telesto
Modified: 2021-06-29 03:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
BT with warnings (and symbols) with without symbols on stack (19.28 KB, text/plain)
2021-01-08 15:57 UTC, Telesto
Details
Screencast (597.86 KB, video/mp4)
2021-01-08 15:59 UTC, Telesto
Details
bt with debug symbols (gen rendering) (5.03 KB, text/plain)
2021-01-09 11:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-08 13:26:21 UTC
Description:
Crash Right clicking in table in Impress with Navigator tab activated

Steps to Reproduce:
1. Open Impress
2. Skip template
3. Set sidebar to navigator
4. Insert table (say 2x2)
5. Type AAA into A2
6. Exit the table
7. Double click AAA & right click

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: f2171af6ce3516598d9f8bac8294025a21a5b1a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-01-08 13:30:54 UTC
Still OK with
Version: 7.1.0.0.beta1+ (x64)
Build ID: f9fab4203c1aa0b9a3f27ce2713b6d5addc7df19
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 2 V Stuart Foote 2021-01-08 15:26:36 UTC
Can not reproduce with STR

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


SB on Navigator deck. 2x2 table created with default style. "AAA" typed in A2. Focus to canvas out of table. Cursor over text. Double click to select "AAA"--Table TB activates.   Right mouse click--no crash, normal context menu for Table cell content.
Comment 3 V Stuart Foote 2021-01-08 15:31:39 UTC
Likewise can not reproduce with STR withcurrent master

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 57a59ad02d2e5e89724c0d2e60cf6e7d99fba005
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Telesto 2021-01-08 15:51:37 UTC
(In reply to V Stuart Foote from comment #3)
> Likewise can not reproduce with STR withcurrent master
> 
> Version: 7.2.0.0.alpha0+ (x64)
> Build ID: 57a59ad02d2e5e89724c0d2e60cf6e7d99fba005
> CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL:
> win
> Locale: en-US (en_US); UI: en-US
> Calc: threaded

Hmm.. tried again.. after profile reset everything fine.. got a crash (different cause).. and the other issue being back too
Comment 5 Telesto 2021-01-08 15:57:24 UTC
Created attachment 168767 [details]
BT with warnings (and symbols) with without symbols on stack

Some change in the build environment? Never seen SAL WARN logs inside debugger (with TB77 builds)
Comment 6 Telesto 2021-01-08 15:59:28 UTC
Created attachment 168768 [details]
Screencast

Not sure what I exactly forgot to mention.. but screencast might help
Comment 7 V Stuart Foote 2021-01-08 16:24:47 UTC
OK, following the STR from the screen cast I do get the crash. 

I'd been removing the template default "Add Title" and "Add Text" text boxes and working with just the new table on canvas.  But following STR of the screencast and only removing the "Add Text" text box and adding table--the selection of table cell text and context menu call will crash.

On master
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 57a59ad02d2e5e89724c0d2e60cf6e7d99fba005
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

get these

https://crashreport.libreoffice.org/stats/crash_details/7baf27a1-14bd-48ff-b029-69440fbf001d

https://crashreport.libreoffice.org/stats/crash_details/28a3ed24-191b-4e0f-b15f-8b8cc369184b

Same steps on 7.1.0.1 (x64) do not crash. Nor do they crash on 2020-12-31 TB77 daily, so something recent.
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 90668f3473f4e52cec823ad39c6fcb44ba7c089b
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 8 Julien Nabet 2021-01-09 11:03:13 UTC
Created attachment 168786 [details]
bt with debug symbols (gen rendering)

On pc Debian x86-64 with master sources updated today, I could reproduce this with gen and gtk3 renderings (I didn't try kf5).
Comment 9 Julien Nabet 2021-01-09 11:08:58 UTC
Caolán: thought you might be interested in this one.
Comment 10 Telesto 2021-01-11 12:33:16 UTC
*** Bug 139526 has been marked as a duplicate of this bug. ***
Comment 11 xordevoreaux 2021-01-13 15:49:23 UTC
When this bug happens to me in Draw, let me emphasize that the crash only occurs when what's typed isn't recognized by the dictionary. 

People testing for AAA won't see this bug if they've set their spell check to ignore words in all caps. If there's no wavy red line under the word when it's right-clicked, no crash.
Comment 12 Commit Notification 2021-01-13 19:39:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/efb6e29359a14888fa9ba1c77c5f34a1e37333cd

tdf#139493 EditViewCallbacks might not implement EditViewPopupParent

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 xordevoreaux 2021-01-18 14:52:51 UTC
(In reply to Commit Notification from comment #12)
> Caolán McNamara committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> efb6e29359a14888fa9ba1c77c5f34a1e37333cd
> 
> tdf#139493 EditViewCallbacks might not implement EditViewPopupParent
> 
> It will be available in 7.2.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Works for me in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1a167625314bf36b735176ed488e6ba9b5e9b675
CPU threads: 8; OS: Windows 10.0 Build 21292; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL