tdf#139493 EditViewCallbacks might not implement EditViewPopupParent

in which case fallback to the vcl::Window

Change-Id: Idc72f04ce72b1bcd42d80869e0ee86b653343a17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109234
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>